--- a/src/app/persona/persona.component.html
+++ b/src/app/persona/persona.component.html
@@ -25,9 +25,6 @@
         <th mat-header-cell *matHeaderCellDef> Opciones </th>
         <td mat-cell *matCellDef="let persona"> 
             <button mat-icon-button>
-                <mat-icon aria-hidden="false" aria-label="agregar persona" (click)="createPersona(persona)">add</mat-icon>
-            </button>
-            <button mat-icon-button>
                 <mat-icon aria-hidden="false" aria-label="editar persona" (click)="updatePersona(persona)">edit</mat-icon>
             </button>
             <button mat-icon-button>
@@ -35,7 +32,12 @@
             </button>
         </td>
     </ng-container>
-  
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+    <ng-container>
+        <button mat-icon-button (click)="createPersona()">
+            <mat-icon aria-hidden="false" aria-label="agregar persona" >add</mat-icon>
+            <span>Crear Persona</span>
+        </button>
+    </ng-container>
